parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AS
    GLOBAL
    NONLOCAL

Grammar

Rule 0     S' -> program
Rule 1     program -> START NEWLINE statements END
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statements -> statements NEWLINE
Rule 5     statements -> NEWLINE
Rule 6     statement -> print_statement
Rule 7     statement -> assignment_statement NEWLINE
Rule 8     statement -> input_statement NEWLINE
Rule 9     statement -> if_statement
Rule 10    statement -> while_statement
Rule 11    statement -> for_statement
Rule 12    statement -> function_def
Rule 13    statement -> function_call
Rule 14    statement -> return_statement
Rule 15    statement -> break_statement
Rule 16    statement -> continue_statement
Rule 17    statement -> pass_statement
Rule 18    statement -> try_except_statement
Rule 19    statement -> import_statement
Rule 20    statement -> class_definition
Rule 21    print_statement -> PRINT LPAREN expression_list RPAREN NEWLINE
Rule 22    expression_list -> expression
Rule 23    expression_list -> expression_list COMMA expression
Rule 24    assignment_statement -> ID ASSIGN expression
Rule 25    input_statement -> ID ASSIGN INPUT LPAREN RPAREN
Rule 26    expression -> expression PLUS term
Rule 27    expression -> expression MINUS term
Rule 28    expression -> term
Rule 29    term -> term TIMES factor
Rule 30    term -> term DIVIDE factor
Rule 31    term -> factor
Rule 32    factor -> NUMBER
Rule 33    factor -> STRING
Rule 34    factor -> ID
Rule 35    factor -> LPAREN expression RPAREN
Rule 36    factor -> MINUS factor
Rule 37    comparison -> expression LESS expression
Rule 38    comparison -> expression GREATER expression
Rule 39    comparison -> expression EQUAL expression
Rule 40    comparison -> expression NOTEQUAL expression
Rule 41    comparison -> expression LESSEQUAL expression
Rule 42    comparison -> expression GREATEREQUAL expression
Rule 43    if_statement -> IF LPAREN expression RPAREN COLON statements
Rule 44    if_statement -> IF LPAREN expression RPAREN COLON statements ELSE COLON statements
Rule 45    if_statement -> IF LPAREN expression RPAREN COLON statements ELIF LPAREN expression RPAREN COLON statements
Rule 46    while_statement -> WHILE LPAREN expression RPAREN COLON statements
Rule 47    for_statement -> FOR LPAREN ID IN RANGE LPAREN NUMBER COMMA NUMBER RPAREN RPAREN COLON statements
Rule 48    function_def -> DEF ID LPAREN parameter_list RPAREN COLON statements
Rule 49    parameter_list -> empty
Rule 50    parameter_list -> ID
Rule 51    parameter_list -> parameter_list COMMA ID
Rule 52    function_call -> ID LPAREN argument_list RPAREN
Rule 53    argument_list -> empty
Rule 54    argument_list -> expression
Rule 55    argument_list -> argument_list COMMA expression
Rule 56    return_statement -> RETURN expression
Rule 57    break_statement -> BREAK
Rule 58    continue_statement -> CONTINUE
Rule 59    pass_statement -> PASS
Rule 60    try_except_statement -> TRY COLON statements EXCEPT COLON statements
Rule 61    try_except_statement -> TRY COLON statements EXCEPT COLON statements FINALLY COLON statements
Rule 62    import_statement -> IMPORT ID
Rule 63    import_statement -> FROM ID IMPORT ID
Rule 64    class_definition -> CLASS ID COLON statements
Rule 65    class_definition -> CLASS ID LPAREN ID RPAREN COLON statements
Rule 66    empty -> <empty>

Terminals, with rules where they appear

AS                   : 
ASSIGN               : 24 25
BREAK                : 57
CLASS                : 64 65
COLON                : 43 44 44 45 45 46 47 48 60 60 61 61 61 64 65
COMMA                : 23 47 51 55
CONTINUE             : 58
DEF                  : 48
DIVIDE               : 30
ELIF                 : 45
ELSE                 : 44
END                  : 1
EQUAL                : 39
EXCEPT               : 60 61
FINALLY              : 61
FOR                  : 47
FROM                 : 63
GLOBAL               : 
GREATER              : 38
GREATEREQUAL         : 42
ID                   : 24 25 34 47 48 50 51 52 62 63 63 64 65 65
IF                   : 43 44 45
IMPORT               : 62 63
IN                   : 47
INPUT                : 25
LESS                 : 37
LESSEQUAL            : 41
LPAREN               : 21 25 35 43 44 45 45 46 47 47 48 52 65
MINUS                : 27 36
NEWLINE              : 1 4 5 7 8 21
NONLOCAL             : 
NOTEQUAL             : 40
NUMBER               : 32 47 47
PASS                 : 59
PLUS                 : 26
PRINT                : 21
RANGE                : 47
RETURN               : 56
RPAREN               : 21 25 35 43 44 45 45 46 47 47 48 52 65
START                : 1
STRING               : 33
TIMES                : 29
TRY                  : 60 61
WHILE                : 46
error                : 

Nonterminals, with rules where they appear

argument_list        : 52 55
assignment_statement : 7
break_statement      : 15
class_definition     : 20
comparison           : 
continue_statement   : 16
empty                : 49 53
expression           : 22 23 24 26 27 35 37 37 38 38 39 39 40 40 41 41 42 42 43 44 45 45 46 54 55 56
expression_list      : 21 23
factor               : 29 30 31 36
for_statement        : 11
function_call        : 13
function_def         : 12
if_statement         : 9
import_statement     : 19
input_statement      : 8
parameter_list       : 48 51
pass_statement       : 17
print_statement      : 6
program              : 0
return_statement     : 14
statement            : 2 3
statements           : 1 3 4 43 44 44 45 45 46 47 48 60 60 61 61 61 64 65
term                 : 26 27 28 29 30
try_except_statement : 18
while_statement      : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . START NEWLINE statements END

    START           shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> START . NEWLINE statements END

    NEWLINE         shift and go to state 3


state 3

    (1) program -> START NEWLINE . statements END
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statements -> . statements NEWLINE
    (5) statements -> . NEWLINE
    (6) statement -> . print_statement
    (7) statement -> . assignment_statement NEWLINE
    (8) statement -> . input_statement NEWLINE
    (9) statement -> . if_statement
    (10) statement -> . while_statement
    (11) statement -> . for_statement
    (12) statement -> . function_def
    (13) statement -> . function_call
    (14) statement -> . return_statement
    (15) statement -> . break_statement
    (16) statement -> . continue_statement
    (17) statement -> . pass_statement
    (18) statement -> . try_except_statement
    (19) statement -> . import_statement
    (20) statement -> . class_definition
    (21) print_statement -> . PRINT LPAREN expression_list RPAREN NEWLINE
    (24) assignment_statement -> . ID ASSIGN expression
    (25) input_statement -> . ID ASSIGN INPUT LPAREN RPAREN
    (43) if_statement -> . IF LPAREN expression RPAREN COLON statements
    (44) if_statement -> . IF LPAREN expression RPAREN COLON statements ELSE COLON statements
    (45) if_statement -> . IF LPAREN expression RPAREN COLON statements ELIF LPAREN expression RPAREN COLON statements
    (46) while_statement -> . WHILE LPAREN expression RPAREN COLON statements
    (47) for_statement -> . FOR LPAREN ID IN RANGE LPAREN NUMBER COMMA NUMBER RPAREN RPAREN COLON statements
    (48) function_def -> . DEF ID LPAREN parameter_list RPAREN COLON statements
    (52) function_call -> . ID LPAREN argument_list RPAREN
    (56) return_statement -> . RETURN expression
    (57) break_statement -> . BREAK
    (58) continue_statement -> . CONTINUE
    (59) pass_statement -> . PASS
    (60) try_except_statement -> . TRY COLON statements EXCEPT COLON statements
    (61) try_except_statement -> . TRY COLON statements EXCEPT COLON statements FINALLY COLON statements
    (62) import_statement -> . IMPORT ID
    (63) import_statement -> . FROM ID IMPORT ID
    (64) class_definition -> . CLASS ID COLON statements
    (65) class_definition -> . CLASS ID LPAREN ID RPAREN COLON statements

    NEWLINE         shift and go to state 4
    PRINT           shift and go to state 22
    ID              shift and go to state 23
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    FOR             shift and go to state 26
    DEF             shift and go to state 27
    RETURN          shift and go to state 28
    BREAK           shift and go to state 29
    CONTINUE        shift and go to state 30
    PASS            shift and go to state 31
    TRY             shift and go to state 32
    IMPORT          shift and go to state 33
    FROM            shift and go to state 34
    CLASS           shift and go to state 35

    statements                     shift and go to state 5
    statement                      shift and go to state 6
    print_statement                shift and go to state 7
    assignment_statement           shift and go to state 8
    input_statement                shift and go to state 9
    if_statement                   shift and go to state 10
    while_statement                shift and go to state 11
    for_statement                  shift and go to state 12
    function_def                   shift and go to state 13
    function_call                  shift and go to state 14
    return_statement               shift and go to state 15
    break_statement                shift and go to state 16
    continue_statement             shift and go to state 17
    pass_statement                 shift and go to state 18
    try_except_statement           shift and go to state 19
    import_statement               shift and go to state 20
    class_definition               shift and go to state 21

state 4

    (5) statements -> NEWLINE .

    END             reduce using rule 5 (statements -> NEWLINE .)
    NEWLINE         reduce using rule 5 (statements -> NEWLINE .)
    PRINT           reduce using rule 5 (statements -> NEWLINE .)
    ID              reduce using rule 5 (statements -> NEWLINE .)
    IF              reduce using rule 5 (statements -> NEWLINE .)
    WHILE           reduce using rule 5 (statements -> NEWLINE .)
    FOR             reduce using rule 5 (statements -> NEWLINE .)
    DEF             reduce using rule 5 (statements -> NEWLINE .)
    RETURN          reduce using rule 5 (statements -> NEWLINE .)
    BREAK           reduce using rule 5 (statements -> NEWLINE .)
    CONTINUE        reduce using rule 5 (statements -> NEWLINE .)
    PASS            reduce using rule 5 (statements -> NEWLINE .)
    TRY             reduce using rule 5 (statements -> NEWLINE .)
    IMPORT          reduce using rule 5 (statements -> NEWLINE .)
    FROM            reduce using rule 5 (statements -> NEWLINE .)
    CLASS           reduce using rule 5 (statements -> NEWLINE .)
    EXCEPT          reduce using rule 5 (statements -> NEWLINE .)
    ELSE            reduce using rule 5 (statements -> NEWLINE .)
    ELIF            reduce using rule 5 (statements -> NEWLINE .)
    FINALLY         reduce using rule 5 (statements -> NEWLINE .)


state 5

    (1) program -> START NEWLINE statements . END
    (3) statements -> statements . statement
    (4) statements -> statements . NEWLINE
    (6) statement -> . print_statement
    (7) statement -> . assignment_statement NEWLINE
    (8) statement -> . input_statement NEWLINE
    (9) statement -> . if_statement
    (10) statement -> . while_statement
    (11) statement -> . for_statement
    (12) statement -> . function_def
    (13) statement -> . function_call
    (14) statement -> . return_statement
    (15) statement -> . break_statement
    (16) statement -> . continue_statement
    (17) statement -> . pass_statement
    (18) statement -> . try_except_statement
    (19) statement -> . import_statement
    (20) statement -> . class_definition
    (21) print_statement -> . PRINT LPAREN expression_list RPAREN NEWLINE
    (24) assignment_statement -> . ID ASSIGN expression
    (25) input_statement -> . ID ASSIGN INPUT LPAREN RPAREN
    (43) if_statement -> . IF LPAREN expression RPAREN COLON statements
    (44) if_statement -> . IF LPAREN expression RPAREN COLON statements ELSE COLON statements
    (45) if_statement -> . IF LPAREN expression RPAREN COLON statements ELIF LPAREN expression RPAREN COLON statements
    (46) while_statement -> . WHILE LPAREN expression RPAREN COLON statements
    (47) for_statement -> . FOR LPAREN ID IN RANGE LPAREN NUMBER COMMA NUMBER RPAREN RPAREN COLON statements
    (48) function_def -> . DEF ID LPAREN parameter_list RPAREN COLON statements
    (52) function_call -> . ID LPAREN argument_list RPAREN
    (56) return_statement -> . RETURN expression
    (57) break_statement -> . BREAK
    (58) continue_statement -> . CONTINUE
    (59) pass_statement -> . PASS
    (60) try_except_statement -> . TRY COLON statements EXCEPT COLON statements
    (61) try_except_statement -> . TRY COLON statements EXCEPT COLON statements FINALLY COLON statements
    (62) import_statement -> . IMPORT ID
    (63) import_statement -> . FROM ID IMPORT ID
    (64) class_definition -> . CLASS ID COLON statements
    (65) class_definition -> . CLASS ID LPAREN ID RPAREN COLON statements

    END             shift and go to state 37
    NEWLINE         shift and go to state 36
    PRINT           shift and go to state 22
    ID              shift and go to state 23
    IF              shift and go to state 24
    WHILE           shift and go to state 25
    FOR             shift and go to state 26
    DEF             shift and go to state 27
    RETURN          shift and go to state 28
    BREAK           shift and go to state 29
    CONTINUE        shift and go to state 30
    PASS            shift and go to state 31
    TRY             shift and go to state 32
    IMPORT          shift and go to state 33
    FROM            shift and go to state 34
    CLASS           shift and go to state 35

    statement                      shift and go to state 38
    print_statement                shift and go to state 7
    assignment_statement           shift and go to state 8
    input_statement                shift and go to state 9
    if_statement                   shift and go to state 10
    while_statement                shift and go to state 11
    for_statement                  shift and go to state 12
    function_def                   shift and go to state 13
    function_call                  shift and go to state 14
    return_statement               shift and go to state 15
    break_statement                shift and go to state 16
    continue_statement             shift and go to state 17
    pass_statement                 shift and go to state 18
    try_except_statement           shift and go to state 19
    import_statement               shift and go to state 20
    class_definition               shift and go to state 21

state 6

    (2) statements -> statement .

    END             reduce using rule 2 (statements -> statement .)
    NEWLINE         reduce using rule 2 (statements -> statement .)
    PRINT           reduce using rule 2 (statements -> statement .)
    ID              reduce using rule 2 (statements -> statement .)
    IF              reduce using rule 2 (statements -> statement .)
    WHILE           reduce using rule 2 (statements -> statement .)
    FOR             reduce using rule 2 (statements -> statement .)
    DEF             reduce using rule 2 (statements -> statement .)
    RETURN          reduce using rule 2 (statements -> statement .)
    BREAK           reduce using rule 2 (statements -> statement .)
    CONTINUE        reduce using rule 2 (statements -> statement .)
    PASS            reduce using rule 2 (statements -> statement .)
    TRY             reduce using rule 2 (statements -> statement .)
    IMPORT          reduce using rule 2 (statements -> statement .)
    FROM            reduce using rule 2 (statements -> statement .)
    CLASS           reduce using rule 2 (statements -> statement .)
    EXCEPT          reduce using rule 2 (statements -> statement .)
    ELSE            reduce using rule 2 (statements -> statement .)
    ELIF            reduce using rule 2 (statements -> statement .)
    FINALLY         reduce using rule 2 (statements -> statement .)


state 7

    (6) statement -> print_statement .

    END             reduce using rule 6 (statement -> print_statement .)
    NEWLINE         reduce using rule 6 (statement -> print_statement .)
    PRINT           reduce using rule 6 (statement -> print_statement .)
    ID              reduce using rule 6 (statement -> print_statement .)
    IF              reduce using rule 6 (statement -> print_statement .)
    WHILE           reduce using rule 6 (statement -> print_statement .)
    FOR             reduce using rule 6 (statement -> print_statement .)
    DEF             reduce using rule 6 (statement -> print_statement .)
    RETURN          reduce using rule 6 (statement -> print_statement .)
    BREAK           reduce using rule 6 (statement -> print_statement .)
    CONTINUE        reduce using rule 6 (statement -> print_statement .)
    PASS            reduce using rule 6 (statement -> print_statement .)
    TRY             reduce using rule 6 (statement -> print_statement .)
    IMPORT          reduce using rule 6 (statement -> print_statement .)
    FROM            reduce using rule 6 (statement -> print_statement .)
    CLASS           reduce using rule 6 (statement -> print_statement .)
    EXCEPT          reduce using rule 6 (statement -> print_statement .)
    ELSE            reduce using rule 6 (statement -> print_statement .)
    ELIF            reduce using rule 6 (statement -> print_statement .)
    FINALLY         reduce using rule 6 (statement -> print_statement .)


state 8

    (7) statement -> assignment_statement . NEWLINE

    NEWLINE         shift and go to state 39


state 9

    (8) statement -> input_statement . NEWLINE

    NEWLINE         shift and go to state 40


state 10

    (9) statement -> if_statement .

    END             reduce using rule 9 (statement -> if_statement .)
    NEWLINE         reduce using rule 9 (statement -> if_statement .)
    PRINT           reduce using rule 9 (statement -> if_statement .)
    ID              reduce using rule 9 (statement -> if_statement .)
    IF              reduce using rule 9 (statement -> if_statement .)
    WHILE           reduce using rule 9 (statement -> if_statement .)
    FOR             reduce using rule 9 (statement -> if_statement .)
    DEF             reduce using rule 9 (statement -> if_statement .)
    RETURN          reduce using rule 9 (statement -> if_statement .)
    BREAK           reduce using rule 9 (statement -> if_statement .)
    CONTINUE        reduce using rule 9 (statement -> if_statement .)
    PASS            reduce using rule 9 (statement -> if_statement .)
    TRY             reduce using rule 9 (statement -> if_statement .)
    IMPORT          reduce using rule 9 (statement -> if_statement .)
    FROM            reduce using rule 9 (statement -> if_statement .)
    CLASS           reduce using rule 9 (statement -> if_statement .)
    EXCEPT          reduce using rule 9 (statement -> if_statement .)
    ELSE            reduce using rule 9 (statement -> if_statement .)
    ELIF            reduce using rule 9 (statement -> if_statement .)
    FINALLY         reduce using rule 9 (statement -> if_statement .)


state 11

    (10) statement -> while_statement .

    END             reduce using rule 10 (statement -> while_statement .)
    NEWLINE         reduce using rule 10 (statement -> while_statement .)
    PRINT           reduce using rule 10 (statement -> while_statement .)
    ID              reduce using rule 10 (statement -> while_statement .)
    IF              reduce using rule 10 (statement -> while_statement .)
    WHILE           reduce using rule 10 (statement -> while_statement .)
    FOR             reduce using rule 10 (statement -> while_statement .)
    DEF             reduce using rule 10 (statement -> while_statement .)
    RETURN          reduce using rule 10 (statement -> while_statement .)
    BREAK           reduce using rule 10 (statement -> while_statement .)
    CONTINUE        reduce using rule 10 (statement -> while_statement .)
    PASS            reduce using rule 10 (statement -> while_statement .)
    TRY             reduce using rule 10 (statement -> while_statement .)
    IMPORT          reduce using rule 10 (statement -> while_statement .)
    FROM            reduce using rule 10 (statement -> while_statement .)
    CLASS           reduce using rule 10 (statement -> while_statement .)
    EXCEPT          reduce using rule 10 (statement -> while_statement .)
    ELSE            reduce using rule 10 (statement -> while_statement .)
    ELIF            reduce using rule 10 (statement -> while_statement .)
    FINALLY         reduce using rule 10 (statement -> while_statement .)


state 12

    (11) statement -> for_statement .

    END             reduce using rule 11 (statement -> for_statement .)
    NEWLINE         reduce using rule 11 (statement -> for_statement .)
    PRINT           reduce using rule 11 (statement -> for_statement .)
    ID              reduce using rule 11 (statement -> for_statement .)
    IF              reduce using rule 11 (statement -> for_statement .)
    WHILE           reduce using rule 11 (statement -> for_statement .)
    FOR             reduce using rule 11 (statement -> for_statement .)
    DEF             reduce using rule 11 (statement -> for_statement .)
    RETURN          reduce using rule 11 (statement -> for_statement .)
    BREAK           reduce using rule 11 (statement -> for_statement .)
    CONTINUE        reduce using rule 11 (statement -> for_statement .)
    PASS            reduce using rule 11 (statement -> for_statement .)
    TRY             reduce using rule 11 (statement -> for_statement .)
    IMPORT          reduce using rule 11 (statement -> for_statement .)
    FROM            reduce using rule 11 (statement -> for_statement .)
    CLASS           reduce using rule 11 (statement -> for_statement .)
    EXCEPT          reduce using rule 11 (statement -> for_statement .)
    ELSE            reduce using rule 11 (statement -> for_statement .)
    ELIF            reduce using rule 11 (statement -> for_statement .)
    FINALLY         reduce using rule 11 (statement -> for_statement .)


state 13

    (12) statement -> function_def .
